--- a/Uphysicsc.tex
+++ b/Uphysicsc.tex
@@ -153,7 +153,10 @@ Finally, we can rewrite the equations of motion for a solar sail in this more ge
 As a consistency check, we note that if \( \alpha = 0 \), that is, the sail is orthogonal to the radiation, we recover \autoref{eq:equations of motion characteristic accelerations}. However, the equations we have just obtained are \emph{not} the equations for a particle experiencing central force motion.   
 
 \section{Model analysis and results}
-\subsection{Feasibility of the trip}
+\subsection{First model}
+Making an aproximation for the radial velocity will enable solving explicitly the motion equation. This will provide the survey of a first general outcomes.
+
+\subsubsection{Feasibility of the trip}
 To solve \autoref{eq:equations of motion general case} it is common to assume \( \dot{v}_r = 0\), as done in \cite{tsu} and \cite{mcinnes}. With this assumption the equations become those of a logarithmic spiral. Then \( v_r = \dot{r} \) can be isolated and then integrated to find an expresssion for the time of travel between two circular and coplanar orbits of a given radius in terms of only the parameters \( \alpha \), \( a_R \) and \( a_G \):
 
 \begin{equation} \label{eq:time of flight between orbits}
@@ -198,7 +201,7 @@ Of course, there is no sail mass which produces an optimum time, since allotting
 
 With a total available mass of \SI{2000}{kg}, a manned mission propelled with a solar sail is obviously not possible. The purpose of a solar sail would then be to send unmanned cargo to Mars, possibly satellites or rovers to explore its surface. According to \cite{presskit}, the Mars Science Lab (MSL) mission, which sent the rover Curiosity to Mars, had a total mass of \SI{3893}{kg}. The rover itself, however had a mass of \SI{899}{kg}, and most of the remaining mass of the mission was destined to propulsion systems. Given that a hypothetical solar sail propelled mission would have no need for fuel tanks or propulsion systems, it seems reasonable that a payload mass of \SI{1000}{kg} would suffice to carry a rover or similar device to Mars. This would leave another \SI{1000}{kg} to be used for a sail of area \SI{142857}{m^2}. As such, the total time to travel to Mars in these conditions is of approximately 390 days. Again, comparing with a mission such as MSL, which took 254 days to reach Mars, we find that this time is higher, but the potentials savings in fuel and propulsion would possibly make up for it. Therefore we conclude that solar sailing is a viable means of sending small cargo to Mars. 
 
-\subsection{Intercepting Mars}
+\subsubsection{Intercepting Mars}
 
 Thus far we have found the time it would take for the sail to complete the change of orbit. However, if our goal is for the payload to arrive at Mars, then the sail should intercept Mars' orbit at a time when Mars' position is close enough to capture the sail. Considering the simplified equations of motion, the equation for the orbit, \( r(\theta) \), is found to be exponential in \( \theta \) (\cite[p. 155]{mcinnes}). Then, the angle at which the sail intersects the orbit of Mars can be found ---having taken \( \theta = 0	\) to be the Mars-Earth close approach---. Its value is around \SI{4.7}{rad}. We can then compute the position of Mars at this instant, given that we have assumed it is following its orbit in uniform circular motion. This position is at \( \theta = \SI{3.6}{rad} \), and thus an encounter does not take place in this conditions.
 
@@ -210,7 +213,7 @@ As a consequence, different options can be thought in order to solve this. The f
  
 Notwithstanding, thinking about using a different flight time suggests what at first sight could seem a better option. Taking the optimal sail pitch angle implies a fixed value of the flight time which in fact, is the minimal one. However, a greater time may be used in order to achieve a better approach to Mars. Computing this, it is found that there is not $\alpha$ so that final angles of Mars and the craft are the same. On the other hand, looking for the best initial angle one obtains that making $\alpha=0.557$rad implies a minimal difference between these two angles. However, this is rather similar to the optimal sail pitch angle and hence, the two angles will still vary on a value close to 1rad, which does not make a significant difference. Further on it is shown that using this same strategy could have a grat impact at the time of designing an optimal flight plan.
 
-Once different options to approach Mars have been considered it is necessary to estimate the arrival conditions inasmuch as an excessive relative velocity between Mars and the craft may trigger an unsafe landing. 
+Once different options to approach Mars have been considered it is necessary to estimate the arrival conditions inasmuch as an excessive relative velocity between Mars and the craft may trigger an unsafe landing. From \autoref{eq:equations of motion general case} one can find the velocity of the solar sail as a function of $r$. This, again is explicit at (\cite[p. 156]{mcinnes}). Using expression for velocity in terms of $r$, the relative speed turns out to be  $0.68$km/s which is sure enough in order to perform a succesful landing despite the fact that, as it has been remarked, an encounter with Mars is not guaranteed.
 
 \subsection{Final model. Simulations}
 Solutions of equations \ref{eq:equations of motion general case} and 2.14 have been simulated. \autoref{fig:simu} shows the trajectory followed by the sail when launched with the omptimal angle descussed in Section 3.1, $\alpha=35.21º$. Note that the trajectory of the sail is not tangent to the orbit of Mars at the point of intersection, as it was in \autoref{fig:logarithmic spiral}, nor the trajectory is a logarithmic spiral.
