--- a/UphysicscNotes.bib
+++ b/UphysicscNotes.bib
@@ -20,13 +20,15 @@
 	author = "William A. Hollerman",
 	title = "The Physics of Solar Sails",
 	year = "2003",
-	institution = "Lousiana University"
+	institution = "Lousiana University",
+	note = "Available at \url{https://ntrs.nasa.gov/archive/nasa/casi.ntrs.nasa.gov/20030093608.pdf}"
 }
 
 @book{presskit,
 	title = "Mars Science Laboratory Landing Press Kit",
 	year = "2012",
-	month = "July"
+	month = "July",
+	note = "Available at \url{https://www.jpl.nasa.gov/news/press_kits/MSLLaunch.pdf}"
 }
 
 
