--- a/Uphysicsc.tex
+++ b/Uphysicsc.tex
@@ -220,7 +220,7 @@ Solutions of equations \ref{eq:equations of motion general case} and 2.14 have b
 
 The simulation in  \autoref{fig:simu} has been run under the assumption that the initial radial velocity of the sail is nule. This idea, supported by litterature and flight plans of previous missions, can be explained arguing the sole effect of the escape velocity the sail has is that of counteracting Earth's pull.
 
-The simulation also allows us to find a first approximation of the velocity with which the sail reaches Mars. Considering both trajectories tangential, which, as seen in the Figure, is feasible, the sail's relative velocity to Mars is \SI{-8,5}{km\cdot s^{-1}} at the intersection of both trajectories.
+The simulation also allows us to find a first approximation of the velocity with which the sail reaches Mars. Considering both trajectories tangential, which, as seen in the Figure, is feasible, the sail's relative velocity to Mars is \SI{-8,5}{km\cdot s^{-1}} at the intersection of both trajectories. Travel time is 248 days according to the simulation.
 
 However, as pointed in Section 3.2, the sail reaches Mars orbit when the planet is to far for the space craft to land or start orbiting it. The simulation does not take into account Mars' gravitational pull, but research points it is not strong enough to change this situation.
 
