--- a/Uphysicsc.tex
+++ b/Uphysicsc.tex
@@ -46,11 +46,10 @@ Test test test
 
 \end{titlingpage}
 
-\clearpage
 \begin{titlingpage}
 \tableofcontents
 \end{titlingpage}
-\clearpage
+
 \section{Introduction}
 
 \subsection{Approach}
@@ -250,13 +249,11 @@ Assuming the trajectories of Mars and the space craft to be tangential in the fi
 	\label{fig:espirals}
 \end{figure}
 
-
-\clearpage
-
 \bibliographystyle{ieeetr}
 \bibliography{UphysicscNotes}
 
-\section*{Appendix}
+\appendix
+\section{Appendix}
 \begin{minted}{python}
 	#Simulation of the sail trajectory
 	
