--- a/UphysicscNotes.bib
+++ b/UphysicscNotes.bib
@@ -20,13 +20,40 @@
 	author = "William A. Hollerman",
 	title = "The Physics of Solar Sails",
 	year = "2003",
-	institution = "Lousiana University"
+	institution = "Lousiana University",
+	note = "Available at \url{https://ntrs.nasa.gov/search.jsp?R=20030093608}"
+}
+
+@techreport{georgevic,
+	author = "R. M. Georgevic",
+	title = "Mathematical model of the solar radiation force and torques acting on the components of a spacecraft",
+	year = "1971",
+	institution = "Jet Propulsion Lab, Caltech",
+	note = "Available at \url{https://ntrs.nasa.gov/search.jsp?R=19720004068}"
 }
 
 @book{presskit,
 	title = "Mars Science Laboratory Landing Press Kit",
 	year = "2012",
-	month = "July"
+	month = "July",
+	note = "Available at \url{https://www.jpl.nasa.gov/news/press_kits/MSLLaunch.pdf}"
 }
+
+@techreport{percy,
+	author = "Thomas K. Percy, Travis Taylor, T. Conley Powell",
+	title = "A Study of Possible Solar Sail Applitions for Mars Missions",
+	year = "2004",
+	institution = "Science Applications International, BAE Systems",
+	note = "Available at \url{https://ntrs.nasa.gov/search.jsp?R=20040086066}"
+}
+
+@techreport{urbanczyk,
+	author = "MGR: Urbanczyk",
+	title = "Solar Sails - A Realistic Propulsion for Spacecraft",
+	year = "1967",
+	institution = "NASA Marshall Space Flight Center",
+	note = "Available at \url{https://ntrs.nasa.gov/search.jsp?R=19670030985}"
+}
+
 
 
