--- a/Uphysicsc.tex
+++ b/Uphysicsc.tex
@@ -252,9 +252,10 @@ Assuming the trajectories of Mars and the space craft to be tangential in the fi
 \bibliographystyle{ieeetr}
 \bibliography{UphysicscNotes}
 
+\onecolumn
 \appendix
-\section{Appendix}
-\begin{minted}{python}
+\section{Python code for numerical solution}
+\begin{minted}[breaklines=true,obeytabs=true,tabsize=2]{python}
 	#Simulation of the sail trajectory
 	
 	import numpy as np
