--- a/Uphysicsc.tex
+++ b/Uphysicsc.tex
@@ -249,7 +249,7 @@ Assuming the trajectories of Mars and the space craft to be tangential in the fi
 	\caption{Simulation of sail trajectories for different sail angles, $\alpha$, in radians. T indicates the time of flight, in days. The green orbit is Earth's, and the red one is Mars'. The blue square indicates the intersection between Mars' orbit and the trajectory of the space craft, and the red square indicates the position of Mars at this exact time. }
 	\label{fig:espirals}
 \end{figure}
-
+\subsection{Optimisation to enter Mars orbit}
 
 \clearpage
 
