Afegir article xinos

--- a/UphysicscNotes.bib
+++ b/UphysicscNotes.bib
@@ -40,7 +40,7 @@
 }
 
 @techreport{percy,
-	author = "Thomas K. Percy, Travis Taylor, T. Conley Powell",
+	author = "Thomas K. Percy and Travis Taylor and T. Conley Powell",
 	title = "A Study of Possible Solar Sail Applitions for Mars Missions",
 	year = "2004",
 	institution = "Science Applications International, BAE Systems",
@@ -55,5 +55,11 @@
 	note = "Available at \url{https://ntrs.nasa.gov/search.jsp?R=19670030985}"
 }
 
-
-
+@inproceedings{xinos,
+	author = "Zhang Maorui and Wang Guanglun and Sun Yong",
+	title = "Solar Sail Trajectory Optimization for Earth-mars Mission",
+	booktitle = "Proceedings of the 29th Chinese Control conference",
+	year = "2010",
+	month = "July",
+	note = "Available at \url{http://ieeexplore.ieee.org/document/5572516/?reload=true}"
+}
