--- a/Uphysicsc.tex
+++ b/Uphysicsc.tex
@@ -69,19 +69,6 @@ The release of the space craft will be considered at the time in which the Earth
 
 The main goals of the article are to discuss a suitable distribuiton of the mass of the space craft, as well as to simulate possible trajectories and the arrival of the sail to Mars.
 
-\subsection{Main assumptions}
-To model the motion of a solar sail, we assumed it to be subject solely to the gravitational attraction from the Sun and solar radiation pressure. This yields a meaningful first approximation which can be used to gain insight on 
-
-Throughout the article, several assumptions have been made, both as interpretations of the problem and in order to facilitate the model. However, all assumptions are supported by literature, and all the approximations were found to be reasonable. We present the approximations and interpretations made.
-
-\begin{itemize}
-\item The orbits of Mars and the Earth are coplanar and perfectly circular.
-\item The only forces acting on the sail during its flight are the gravitational force exerted by the Sun and the thrust given by the inciding photons. Since the initial radial velocity is the Earth escape velocity, it is reasonable not to consider its attraction. In a first approach to the model, Mars attraction force has not been computed.
-\item As stated in the problem given, we assume the total mass of the space craft is \SI{2 000}{kg} , including the payload and the sail. Thus, our goal is to maximize the payload while still finding a reasonable time of flight. 
-\item Comparing the research which has already been done to the fact that the preassure exerted by light is twice its energy density, one finds that the case given is one of a perfect reflection.
-\item We assume the only initial tangential velocity of the sail is the Earth's linear velocity. Thus, one ignores the effects of the Earth's rotation.
-\end{itemize}
-
 \subsection{General assumptions}
 When one considers the general model of a solar sail orbiting the Sun, one finds that the acceleration of the center of mass of the sail-Sun system is non-vanishing, and therefore, taking the center of mass as the origin of the reference frame, as we do in subsequent calculations, does not yield an inertial frame. However, this acceleration is negligible and so we use the approximation that the acceleration of the center of mass of the Sun-sail system ---which can in turn be approximated by the Sun's position--- is zero.
 
@@ -152,10 +139,7 @@ Finally, we can rewrite the equations of motion for a solar sail in this more ge
 As a consistency check, we note that if \( \alpha = 0 \), that is, the sail is orthogonal to the radiation, we recover \autoref{eq:equations of motion characteristic accelerations}. However, the equations we have just obtained are \emph{not} the equations for a particle experiencing central force motion.   
 
 \section{Model analysis and results}
-\subsection{First model}
-Making an aproximation for the radial velocity will enable solving explicitly the motion equation. This will provide the survey of a first general outcomes.
-
-\subsubsection{Feasibility of the trip}
+\subsection{Feasibility of the trip} \label{sec:Feasibility of the trip}
 To solve \autoref{eq:equations of motion general case} it is common to assume \( \dot{v}_r = 0\), as done in \cite{tsu} and \cite{mcinnes}. With this assumption the equations become those of a logarithmic spiral. Then \( v_r = \dot{r} \) can be isolated and then integrated to find an expresssion for the time of travel between two circular and coplanar orbits of a given radius in terms of only the parameters \( \alpha \), \( a_R \) and \( a_G \):
 
 \begin{equation} \label{eq:time of flight between orbits}
@@ -191,7 +175,7 @@ To test the feasibility of the voyage, we will compute the time of flight as a f
 
 Of course, there is no sail mass which produces an optimum time, since allotting more mass to the sail only affects \( a_R \), and not \( a_G \), which is mass-independent. 
 
-\begin{figure}[b]
+\begin{figure}
 	\centering
 	\includegraphics[scale=0.35]{time}
 	\caption{Flight time as a function of the sail mass}
@@ -200,24 +184,25 @@ Of course, there is no sail mass which produces an optimum time, since allotting
 
 With a total available mass of \SI{2000}{kg}, a manned mission propelled with a solar sail is obviously not possible. The purpose of a solar sail would then be to send unmanned cargo to Mars, possibly satellites or rovers to explore its surface. According to \cite{presskit}, the Mars Science Lab (MSL) mission, which sent the rover Curiosity to Mars, had a total mass of \SI{3893}{kg}. The rover itself, however had a mass of \SI{899}{kg}, and most of the remaining mass of the mission was destined to propulsion systems. Given that a hypothetical solar sail propelled mission would have no need for fuel tanks or propulsion systems, it seems reasonable that a payload mass of \SI{1000}{kg} would suffice to carry a rover or similar device to Mars. This would leave another \SI{1000}{kg} to be used for a sail of area \SI{142857}{m^2}. As such, the total time to travel to Mars in these conditions is of approximately 390 days. Again, comparing with a mission such as MSL, which took 254 days to reach Mars, we find that this time is higher, but the potentials savings in fuel and propulsion would possibly make up for it. Therefore we conclude that solar sailing is a viable means of sending small cargo to Mars. 
 
-\subsubsection{Intercepting Mars} \label{mars}
+\subsection{Intercepting Mars}
 
-Thus far we have found the time it would take for the sail to complete the change of orbit. However, if our goal is for the payload to arrive at Mars, then the sail should intercept Mars' orbit at a time when Mars' position is close enough to capture the sail. Considering the simplified equations of motion, the equation for the orbit, \( r(\theta) \), is found to be exponential in \( \theta \) (\cite[p. 155]{mcinnes}). Then, the angle at which the sail intersects the orbit of Mars can be found ---having taken \( \theta = 0	\) to be the Mars-Earth close approach---. Its value is around \SI{4.7}{rad}. We can then compute the position of Mars at this instant, given that we have assumed it is following its orbit in uniform circular motion. This position is at \( \theta = \SI{3.6}{rad} \), and thus an encounter does not take place in this conditions.
+Thus far we have found the time it would take for the sail to complete the change of orbit. However, if our goal is for the payload to arrive at Mars, then the sail should intercept Mars' orbit at a time when Mars' position is close enough to capture the sail. Considering the simplified equations of motion, the equation for the orbit, \( r(\theta) \), is found to be exponential in \( \theta \) (\cite[p. 155]{mcinnes}). Then, the angle at which the sail intersects the orbit of Mars can be found ---having taken \( \theta = 0	\) to be the Mars-Earth close approach---. Its value is around \SI{4.7}{rad}. We can then compute the position of Mars at this instant, given that we have assumed it is following its orbit in uniform circular motion. This position is at \( \theta = \SI{3.6}{rad} \), and thus an encounter does not take place in these conditions. This can be seen in \autoref{fig:optimal angle simulation}.
 
-We see then that in the conditions of the problem statement, it is not possible to plot a course for Mars with the optimal sail angle. To remedy this it might be possible to course correct with a secondary thrust source, but given the restriction on the total mass of the craft, this is not an option. Alternatively, we might consider a different initial position, but again, the initial position is a requirement of the problem.
+\begin{figure}
+	\centering
+	\includegraphics[scale=0.5]{simu.png}
+	\caption{Simulation of the trajectory of the sail for the optimal angle.The axes show distance in AU. The blue and red dots depict the solar sail and Mars at the time the sail first intercepts Mars' orbit, respectively.}
+	\label{fig:optimal angle simulation}
+\end{figure}
 
-The approach followed will be to sacrifice a minimal time for a guaranteed encounter of the sail with Mars.
+We see then that in the conditions of the problem statement, it is not possible to plot a course for Mars with the optimal sail angle. This, then begs the question whether it is possible to find a sail angle that leads to a sail-Mars encounter. To perform this calculation we integrate an expression for the angular velocity of the sail, in terms only of \( r \) and \( \alpha \) found in \cite[p. 156]{mcinnes}, which gives the angle at which the sail intercepts the orbit of Mars for a given \( \alpha \), \( \theta_s(\alpha) \). Furthermore, for a given sail angle we can determine the time it will take for the sail to reach the orbit of Mars. Thus, as Mars is moving in uniform circular motion, we also know the angle it will be at when the interception happens, \( \theta_M(\alpha) \). Thus, we are looking for the value of \( \alpha \) such that \( \theta_s(-a) = \theta_M(\alpha) \). This equation turns out to have no solution in these conditions. Furthermore, if we try to minimize the difference \( \theta_s - \theta_M \) we obtain an angle of about \SI{32}{º}, which is close to the optimum angle.
 
-As a consequence, different options can be thought in order to solve this. The first one may consist in modifying the followed path by finding a secondary thrust source though attending to allowed payload this does not seem viable. On the other hand, a different initial condition could be considered in order to compensate the final angle difference between the craft and Mars. This will consist in launching the solar sail not at the closest approach to Mars but with an initial phase difference so that an encounter can be guaranteed. Nevertheless, this idea will not be developed in the survey as a better performance with this initial conditions is assessed in the following sections.
- 
-Notwithstanding, thinking about using a different flight time suggests what at first sight could seem a better option. Taking the optimal sail pitch angle implies a fixed value of the flight time which in fact, is the minimal one. However, a greater time may be used in order to achieve a better approach to Mars. Computing this, it is found that there is not $\alpha$ so that final angles of Mars and the craft are the same. On the other hand, looking for the best initial angle one obtains that making $\alpha=0.557$rad implies a minimal difference between these two angles. However, this is rather similar to the optimal sail pitch angle and hence, the two angles will still vary on a value close to 1rad, which does not make a significant difference. Further on it is shown that using this same strategy could have a grat impact at the time of designing an optimal flight plan.
-
-Once different options to approach Mars have been considered it is necessary to estimate the arrival conditions inasmuch as an excessive relative velocity between Mars and the craft may trigger an unsafe landing. From \autoref{eq:equations of motion general case} one can find the velocity of the solar sail as a function of $r$. This, again is explicit at (\cite[p. 156]{mcinnes}). Using expression for velocity in terms of $r$, the relative speed turns out to be  $0.68$km/s which is sure enough in order to perform a succesful landing despite the fact that, as it has been remarked, an encounter with Mars is not guaranteed.
+All of this leads us to believe that there is not much else that can be done to improve the characteristics of the voyage in these conditions. In the next two sections we will explore two different methods to improve on the characteristics of the mission.
 
 \subsection{Final model. Simulations}
 Solutions of equations \ref{eq:equations of motion general case} and 2.14 have been obtained numerically. The code used for the simulation is attached in the Appendix and consists of a numerical solution of the differential equations considered. This way, one can plot the trajectory of the sail under this conditions, and determine different parameters along it.
 
- \autoref{fig:simu} shows the trajectory followed by the sail when launched with the omptimal angle descussed in Section 3.1, $\alpha=35.21º$. Note that the trajectory of the sail is not tangent to the orbit of Mars at the point of intersection, as it was in \autoref{fig:logarithmic spiral}, nor the trajectory is a logarithmic spiral.
+ \autoref{fig:optimal angle simulation} shows the trajectory followed by the sail when launched with the omptimal angle descussed in Section 3.1, $\alpha=35.21º$. Note that the trajectory of the sail is not tangent to the orbit of Mars at the point of intersection, as it was in \autoref{fig:logarithmic spiral}, nor the trajectory is a logarithmic spiral.
 
 The simulation in  \autoref{fig:simu} has been run under the assumption that the initial radial velocity of the sail is nule. This idea, supported by litterature and flight plans of previous missions, can be explained arguing the sole effect of the escape velocity the sail has is that of counteracting Earth's pull.
 
@@ -225,13 +210,7 @@ The simulation also allows us to find a first approximation of the velocity with
 
 However, as pointed in Section 3.2, the sail reaches Mars orbit when the planet is to far for the space craft to land or start orbiting it. The simulation does not take into account Mars' gravitational pull, but research points it is not strong enough to change this situation.
 
-\begin{figure}[h]
-	\centering
-	\includegraphics[scale=0.5]{simu.png}
-	\caption{\small Simulation of the trajectory of the sail. The Sun is at the origin and axes are in AU. The blue squared represents the sail when reaching Mars' orbit, and the red square, Mars at this same time.}
-	\label{fig:simu}
-
-\end{figure} 
+ 
 The simulation in  \autoref{fig:simu} has been run under the assumption that the initial radial velocity of the sail is nule. This idea, supported by litterature and flight plans of previous missions, can be explained arguing the sole effect of the escape velocity the sail has is that of counteracting Earth's pull.
 
 
