--- a/Uphysicsc.tex
+++ b/Uphysicsc.tex
@@ -248,6 +248,15 @@ Furthermore, it is required to know $\alpha(t)$ in order to design the flight pl
 	\includegraphics[scale=0.35]{cocu.png}
 	\caption{Representation of the manoeuvres needed to stabilize the orbit.}
 \end{figure}
+\section{Conclusions}
+\subsection{Strengths and weaknesses}
+Research done suggests different aspects of the model which could be remarked:
+\begin{itemize}
+\item Spacecraft mass is properly distributed between payload and solar sail mass. Moreover this distribution leads to a reasonable flight time.
+\item Results are obtained not only for aproximations but also for exact expressions of motion equations. Calculations allow one to visualize trajectories followed by the craft.
+\item Different values of sail pitch angles are tried in order to achieve a better approach to Mars. Other possibilities are suggested also for the same reason. For instance, changing initial conditions in Section 3.4 would guarantee this goal.
+
+\end{itemize}
 \clearpage
 \bibliographystyle{ieeetr}
 \bibliography{UphysicscNotes}
