--- a/Uphysicsc.tex
+++ b/Uphysicsc.tex
@@ -260,9 +260,10 @@ Furthermore, it is required to know $\alpha(t)$ in order to design the flight pl
 \subsection{Strengths and weaknesses}
 Research done suggests different aspects of the model which could be remarked:
 \begin{itemize}
-\item Spacecraft mass is properly distributed between payload and solar sail mass. Moreover this distribution leads to a reasonable flight time.
-\item Results are obtained not only for aproximations but also for exact expressions of motion equations. Calculations allow one to visualize trajectories followed by the craft.
+\item Spacecraft mass is properly distributed between payload and solar sail mass according to previous missions. Moreover this distribution leads to a reasonable flight time.
+\item Results are obtained not only for aproximations but also for exact expressions of motion equations. Calculations allow one to visualize trajectories followed by the craft. In addition, simulations seem to be accurate when boundary values are computed. They give an optimal flight time too.
 \item Different values of sail pitch angles are tried in order to achieve a better approach to Mars. Other possibilities are suggested also for the same reason. For instance, changing initial conditions in Section 3.4 would guarantee this goal.
+\item Last part of the report shows that it is possible to perform a succesful flight by making $\alpha$ a function of time. This is, in a first approach, solved numerically. Also necessary manoeuvres are simulated. 
 
 \end{itemize}
 \clearpage
