--- a/Uphysicsc.tex
+++ b/Uphysicsc.tex
@@ -264,6 +264,7 @@ Research done suggests different aspects of the model which could be remarked:
 \item Results are obtained not only for aproximations but also for exact expressions of motion equations. Calculations allow one to visualize trajectories followed by the craft. In addition, simulations seem to be accurate when boundary values are computed. They give an optimal flight time too.
 \item Different values of sail pitch angles are tried in order to achieve a better approach to Mars. Other possibilities are suggested also for the same reason. For instance, changing initial conditions in Section 3.4 would guarantee this goal.
 \item Last part of the report shows that it is possible to perform a succesful flight by making $\alpha$ a function of time. This is, in a first approach, solved numerically. Also necessary manoeuvres are simulated. 
+\item Survey proves that propelling crafts by solar sails it is totally feasible. At least, when an interpletary flight in a reasonable amount of time is pursued.
 
 \end{itemize}
 \clearpage
