--- a/Uphysicsc.tex
+++ b/Uphysicsc.tex
@@ -39,7 +39,9 @@
 
 \noindent \hrulefill \\
 \begin{abstract}
-Test test test
+The aim of this report is to discuss the viability of a solar sail mission to Mars, in terms of payload and flight time. Results have been mainly obtain by building a model of the problem, ruled by the initial conditions and the forces acting on the space craft. Under some approximations, the model can be anallytically solved, but the complete set of differential equations had to be numerically solved and simulated. 
+
+Results show such a mission would be indeed feasible, and a distrubution of weight involving a payload of \SI{1000}{kg} is suggested, giving a reasonable flight time of between 290 and 460 days, depending on trajectory. Actual arrival to Mars has been found to be uncomputable given the initial conditions, but different trajectories have been proposed to reach its orbit, or even passing close to it, as well as one accopling to it. A flight plan has been concluded for the latter, including necessary manoeuvers along the voyage. Relative velocities between the space craft and Mars have been computed, finding values among the interval needed for a safe landing.
 
 \end{abstract}
 \hrulefill \\
