--- a/Uphysicsc.tex
+++ b/Uphysicsc.tex
@@ -262,10 +262,16 @@ Research done suggests different aspects of the model which could be remarked:
 \begin{itemize}
 \item Spacecraft mass is properly distributed between payload and solar sail mass according to previous missions. Moreover this distribution leads to a reasonable flight time.
 \item Results are obtained not only for aproximations but also for exact expressions of motion equations. Calculations allow one to visualize trajectories followed by the craft. In addition, simulations seem to be accurate when boundary values are computed. They give an optimal flight time too.
-\item Different values of sail pitch angles are tried in order to achieve a better approach to Mars. Other possibilities are suggested also for the same reason. For instance, changing initial conditions in Section 3.4 would guarantee this goal.
+\item Different values of sail pitch angle are tried in order to achieve a better approach to Mars. Other possibilities are suggested also for the same reason. 
+\item Arriving to Mars is achieved when taking different initial relative position between the two planets. This is mentioned in the Section 3.2 but also guarantees a succesful mission in Section 3.4. Moreover, it is always made at values of speed that ensure a safe landing.
 \item Last part of the report shows that it is possible to perform a succesful flight by making $\alpha$ a function of time. This is, in a first approach, solved numerically. Also necessary manoeuvres are simulated. 
-\item Survey proves that propelling crafts by solar sails it is totally feasible. At least, when an interpletary flight in a reasonable amount of time is pursued.
-
+\item Survey proves that propelling crafts by solar sails is totally feasible. At least, when an interpletary flight in a reasonable amount of time is pursued.
+\end{itemize}
+On the other hand work done has also some points than in a certain way could be improved. Those are:
+\begin{itemize}
+	\item The initial given conditions do not allow the model to predict an exact and totally accurate flight plan in order to perform a landing on Mars.
+	\item Simulations does not consider Mars attraction force. Even though this interaction is quite small compared with other forces involved, it may cause variations in followed trajectories.
+	\item Analysis in Section 3.4 is not as accurate as the one made in consulted literature. Used data is partly based on uneducated guess and computed orbit is not the exact Mars' orbit.
 \end{itemize}
 \clearpage
 \bibliographystyle{ieeetr}
